--- a/Cgine/Cgine.vcxproj.filters
+++ b/Cgine/Cgine.vcxproj.filters
@@ -3,5 +3,6 @@
   <ItemGroup>
     <ClInclude Include="Common\CommonHeaders.h" />
     <ClInclude Include="Common\PrimitiveTypes.h" />
+    <ClInclude Include="Common\id.h" />
   </ItemGroup>
 </Project>
