--- a/Cgine/Cgine.vcxproj.filters
+++ b/Cgine/Cgine.vcxproj.filters
@@ -3,6 +3,8 @@
   <ItemGroup>
     <ClInclude Include="Common\CommonHeaders.h" />
     <ClInclude Include="Common\PrimitiveTypes.h" />
-    <ClInclude Include="Common\id.h" />
+    <ClInclude Include="Common\Id.h" />
+    <ClInclude Include="Components\Entity.h" />
+    <ClInclude Include="Components\ComponentsCommon.h" />
   </ItemGroup>
 </Project>
