--- a/Cgine/Cgine.vcxproj.filters
+++ b/Cgine/Cgine.vcxproj.filters
@@ -6,5 +6,10 @@
     <ClInclude Include="Common\Id.h" />
     <ClInclude Include="Components\Entity.h" />
     <ClInclude Include="Components\ComponentsCommon.h" />
+    <ClInclude Include="Components\TransformComponent.h" />
+    <ClInclude Include="Utils\Utils.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Components\Entity.cpp" />
   </ItemGroup>
 </Project>
